Creación de escenas, menú en proceso, hecho círculos que manden volando según su dirección, mejorada la hitbox del triángulo, mejorados sprites de cuadrados

--- a/SSS Square Square Square!!!/SSS Square Square Square!!!/main.html
+++ b/SSS Square Square Square!!!/SSS Square Square Square!!!/main.html
@@ -3,8 +3,10 @@
 <html lang="en" xmlns="http://www.w3.org/1999/xhtml">
 <head>
     <meta charset="utf-8" />
-	<script src="//cdn.jsdelivr.net/npm/phaser@3.11.0/dist/phaser.js"></script>
+    <script src="//cdn.jsdelivr.net/npm/phaser@3.11.0/dist/phaser.js"></script>
+    <script src="menu.js"></script>
     <script src="Square.js"></script>
+    <script src="game.js"></script>
     <title></title>
 </head>
 <body>
