Cambio en las plataformas, sprite de Dio mejorado, menú de pausa con opcion de volver al menu principal implementado, sonidos implementados, sprite de podio implementado, implementado utf8, añadidos varios sprites de skins para versiones futuras, logo implementado a la pantalla de título, disminuido el rebote a la mitad por feedback de betatesters,

--- a/SSS Square Square Square!!!/SSS Square Square Square!!!/index.html
+++ b/SSS Square Square Square!!!/SSS Square Square Square!!!/index.html
@@ -2,7 +2,7 @@
 
 <html lang="en" xmlns="http://www.w3.org/1999/xhtml">
 <head>
-    <meta charset="utf-8" />
+    <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
     <script src="//cdn.jsdelivr.net/npm/phaser@3.19.0/dist/phaser.js"></script>
     <script src="menu.js"></script>
     <script src="Square.js"></script>
