solucionado problema con sts

--- a/src/main/resources/static/index.html
+++ b/src/main/resources/static/index.html
@@ -3,13 +3,14 @@
 <html lang="en" xmlns="http://www.w3.org/1999/xhtml">
 <head>
     <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
-    
+
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.0.0/jquery.min.js"></script>
     <script src="//cdn.jsdelivr.net/npm/phaser@3.19.0/dist/phaser.js"></script>
     <script src="Conexiones.js"></script>
     <script src="menu.js"></script>
     <script src="Square.js"></script>
-    <script src="game.js"></script>    
+    <script src="SquareLocal.js"></script>
+    <script src="game.js"></script>
     <title></title>
 </head>
 <body>
